# tcg-tools

./: README.md  app.py  pyproject.toml
apps/swu_picklist/: app.py
apps/swu_picklist/templates/: index.html
databases/: README.md  __init__.py  models.py
databases/swu/: __init__.py  card.py  database.py
parsers/: README.md  __init__.py  models.py
parsers/swu/: parser.py  swudb.py
static/css/: base.css
templates/: base.html  index.html  navbar.html
tools/mtg/: __init__.py
tools/mtg/card_names/: __init__.py  routes.py
tools/mtg/card_names/templates/mtg/card-names/: index.html
tools/swu/: __init__.py
tools/swu/picklist/: __init__.py  routes.py
tools/swu/picklist/templates/swu/picklist/: index.html
